# Docking-studio

./: .env.example  .gitignore  .trivyignore  CHANGELOG.md  CITATION.cff  COMPLETE_RELEASE_PACKAGE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.gnina  Dockerfile.single  Dockerfile.vina-cpu  Dockerfile.vina-gpu  LICENSE  QUICKSTART.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.0.1.md  SECURITY.md  app.py  biodockify.spec  build_exe.spec  build_macos_arm64.spec  build_macos_intel.spec  build_windows.spec  checksums.txt  debug_stack.py  docker-compose.single.yml  docker-compose.yml  entrypoint.sh  installer.nsi  pyproject.toml  requirements.txt  run.bat  run.sh  start.bat  start.sh
.github/workflows/: codeql.yml  docker.yml  dockerfile-lint.yml  frontend-security.yml  gitleaks.yml  python-security.yml  release.yml  trivy.yml
app/: launcher.py
backend/: Dockerfile  analysis.py  db.py  docking_engine.py  logging_config.py  main.py  requirements.txt
docs/: SOFTWARE_DOCUMENTATION.md  faq.md  installation.md  troubleshooting.md  user_guide.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_docker.bat  png_to_ico.py  prepare_installer_assets.py  update_version.py  validate_workflow.py
src/: __init__.py  agent_zero.py  auto_backend.py  backend_connection.py  biodockify_main.py  canonical_normalizer.py  checkpoint_manager.py  config.py  config_settings.py  database.py  docker_manager.py  logging_config.py  main.py  master_pipeline.py  oddt_analyzer.py  rdkit_calculator.py  recovery_manager.py  vina_engine.py
(+192 files in other folders)
